tests/paczka2/big_fuzzy/54643288.err
Error in line 6: X9HQYH4OQGY S764 57,1
Error in line 17: 6Ub4u S726 96,8
Error in line 20: 6Ub4u S57 64,2
Error in line 41: 4EaFN S57 2,8
Error in line 44: 4EaFN S639 84,9
Error in line 46: CnLq9hnR S764 18,5
Error in line 49: bFAZPCwU S764 87,4
Error in line 57: 6Ub4u S57 25,4
Error in line 61: 6Ub4u S764 0,6
Error in line 67: X9HQYH4OQGY S726 11,78
Error in line 62: bFAZPCwU S726 71,2
Error in line 70: 4EaFN S764 38,6
Error in line 83: 4EaFN S57 77,9
Error in line 90: eAF S76Y 3Y,2
Error in line 94: CnLq9hnR S764 11,3
Error in line 96: CnLq9hnR S726 18,5
Error in line 102: 4EaFN S764 12,2
Error in line 101: S57 S726 33,4
Error in line 92: eAF S764 70,5
Error in line 105: S57 S57 97,9
Error in line 74: X9HQYH4OQGY S726 49,8
Error in line 107: eAF S57 98,2
Error in line 108: 4EaFN S726 56,2
Error in line 126: bFAZPCwU S726 132,8
Error in line 130: 4EaFN S764 87,7
Error in line 134: bFAZPCwU S639 35,6
Error in line 145: S57 S764 46,7
Error in line 153: S57 S764 14,0
Error in line 154: S57 S57 67,4
Error in line 159: S57 S639 36,61
Error in line 140: X9HQYH4OQGY S639 165,0
Error in line 155: S57 S639 11,2
Error in line 168: 4EaFN S639 15,83
Error in line 162: 4EaFN S726 96,9
Error in line 183: S57 S726 42,2
Error in line 194: CnLq9hnR S639 83,1
Error in line 164: eAF S639 122,3
Error in line 200: bFAZPCwU S57 93,5
Error in line 214: 6Ub4u S726 48,8
Error in line 216: 6Ub4u S639 94,0
Error in line 217: 6Ub4u S57 85,5
Error in line 218: 6Ub4u S726 6,0
Error in line 235: 6Ub4u S57 51,8
Error in line 245: 6Ub4u S764 5,2
